--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 runtime: python39
-entrypoint: gunicorn -b :$PORT app:app
+entrypoint: gunicorn -w 4 -b :$PORT app:app
 
 handlers:
-- url: /
+- url: /.*
   script: auto
