--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
-Flask==3.0.3
-Flask-Caching==2.3.0
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.1
+aiosignal==1.3.1
+asyncio==3.4.3
+attrs==24.2.0
+blinker==1.8.2
 cachelib==0.9.0
-requests==2.32.3
-python-dotenv==1.0.1
-pillow==10.4.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+Flask==3.0.3
+Flask-Caching==2.3.0
+frozenlist==1.4.1
+git-filter-repo==2.45.0
+gunicorn==22.0.0
+idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+multidict==6.0.5
+packaging==24.1
+pillow==10.4.0
+python-dotenv==1.0.1
+requests==2.32.3
+tenacity==9.0.0
+urllib3==2.2.2
 Werkzeug==3.0.3
+yarl==1.9.4
